# QiuckEx

./: README.md  pnpm-lock.yaml
app/contract/contracts/quickex/: Cargo.toml
app/contract/contracts/quickex/src/: events.rs  fuzz_test.rs  lib.rs  metadata_test.rs  storage.rs  storage_test.rs  test.rs  types.rs
app/contract/contracts/quickex/test_snapshots/bench_test/: bench_deposit.1.json  bench_deposit_with_commitment.1.json  bench_verify_proof_view.1.json  bench_withdraw.1.json
app/contract/contracts/quickex/test_snapshots/escrow_id_test/: test_deposit_different_params_yield_different_ids.1.json  test_deposit_idempotent_on_identical_params.1.json
app/contract/contracts/quickex/test_snapshots/fee_test/: test_fee_admin.1.json  test_withdrawal_with_fee.1.json  test_zero_fee.1.json
app/contract/contracts/quickex/test_snapshots/metadata_test/: golden_deployment_metadata_schema_is_stable.1.json  metadata_contract_id_differs_across_deployments.1.json  metadata_versions_stable_after_migrate.1.json  metadata_wasm_hash_populated_after_upgrade.1.json  metadata_wasm_hash_updated_on_second_upgrade.1.json
app/contract/contracts/quickex/test_snapshots/role_test/: test_arbiter_role_resolution.1.json
app/contract/contracts/quickex/test_snapshots/stealth_test/: test_register_duplicate_stealth_address_fails.1.json  test_stealth_double_withdraw_fails.1.json  test_stealth_full_flow.1.json  test_stealth_withdraw_after_expiry_fails.1.json  test_stealth_withdraw_wrong_spend_pub_fails.1.json
app/contract/contracts/quickex/test_snapshots/storage_test/: test_escrow_storage.1.json  (+4 more)
(+177 files in other folders)
