[package]
name = "quickex"
version = "0.1.0"
edition = "2021"
description = "X-Ray privacy Soroban contract for QuickEx"
license = "MIT OR Apache-2.0"
authors = ["QiuckEx Team"]
repository = "https://github.com/quickex/app"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23"

[dev-dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }
proptest = { version = "1.5.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
opt-level = 1

[profile.test]
opt-level = 0
debug = true

